--- a/BackgroundEasy/BackgroundEasy.csproj
+++ b/BackgroundEasy/BackgroundEasy.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Common\Attached\ChildWindowService.cs" />
     <Compile Include="Common\Attached\DataGridMvvmHelper.cs" />
     <Compile Include="Common\Attached\TextBoxAttachedProperties.cs" />
+    <Compile Include="Common\BaseWindowViewModel.cs" />
     <Compile Include="Common\BindingProxy.cs" />
     <Compile Include="Common\GridSpliterStateDictionary.cs" />
     <Compile Include="Common\Rop.cs" />
@@ -153,6 +154,7 @@
     <Compile Include="Converters\OverdueDateTimeConverter.cs" />
     <Compile Include="Converters\PromptTypeToFontAwesomeIconKindConverter.cs" />
     <Compile Include="Model\OutputAttribute.cs" />
+    <Compile Include="Model\Preset.cs" />
     <Compile Include="Model\ScrapingOptions.cs" />
     <Compile Include="Model\Exceptions.cs" />
     <Compile Include="Model\NotifyPropertyChanage.cs" />
@@ -169,12 +171,20 @@
     <Compile Include="Services\XLSXExceptions.cs" />
     <Compile Include="ViewModel\BaseSidePanelViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
+    <Compile Include="ViewModel\CreateEditPresetVM.cs" />
     <Compile Include="ViewModel\MainVM.cs" />
+    <Compile Include="ViewModel\PresetVM.cs" />
     <Compile Include="ViewModel\SettingsVM.cs" />
     <Compile Include="ViewModel\PromptWindowVM.cs" />
     <Compile Include="ViewModel\ScrapingProgressVM.cs" />
     <Compile Include="View\AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\CreateEditPresetWindow.xaml.cs">
+      <DependentUpon>CreateEditPresetWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\PresetView.xaml.cs">
+      <DependentUpon>PresetView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ItemsCollectionView.xaml.cs">
       <DependentUpon>ItemsCollectionView.xaml</DependentUpon>
@@ -219,6 +229,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="View\AboutWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\CreateEditPresetWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\PresetView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
