--- a/BackgroundEasy/BackgroundEasy.csproj
+++ b/BackgroundEasy/BackgroundEasy.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Services\ConfigService.cs" />
     <Compile Include="Services\CoreUtils.cs" />
     <Compile Include="Services\CSVUtils.cs" />
+    <Compile Include="Services\ProcessingUtils.cs" />
     <Compile Include="Services\Prompt.cs" />
     <Compile Include="Services\ScrapingHelper.cs" />
     <Compile Include="Services\StorageHelper.cs" />
@@ -412,6 +413,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Media\example-small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Media\example-large.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.5.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.5.0\build\MaterialDesignThemes.targets')" />
