--- a/BackgroundEasy/BackgroundEasy.csproj
+++ b/BackgroundEasy/BackgroundEasy.csproj
@@ -166,7 +166,7 @@
     <Compile Include="Services\CSVUtils.cs" />
     <Compile Include="Services\ProcessingUtils.cs" />
     <Compile Include="Services\Prompt.cs" />
-    <Compile Include="Services\ScrapingHelper.cs" />
+    <Compile Include="Services\Processor.cs" />
     <Compile Include="Services\StorageHelper.cs" />
     <Compile Include="Services\UserSettings.cs" />
     <Compile Include="Services\Utils.cs" />
